--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -2,3 +2,7 @@
   margin-top: 0;
   font-size: $font-size;
 }
+@mixin btn-variant($clolr, $bg-color) {
+  color: $clolr;
+  background-color: $bg-color;
+}
