[mengqiu] add TODO feedback

--- a/src/style/_extends.scss
+++ b/src/style/_extends.scss
@@ -1,3 +1,5 @@
+//TODO feedback: 这个class的命名不合理，因为它同时被页面上的登录button和注册button都使用了。
+// 命名叫'base-button'更合理一些
 .login-button {
   border-radius: 20px;
   padding: 4px 26px;
