--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -1,3 +1,5 @@
+//TODO feedback: 说一个总的css class的命名问题：我们的css class的命名只允许出现'小写字母'和中线，也就是
+// 合理的只有a,或者a-b这两种格式。除此之外的任何其他格式都是不正确的
 .container {
   height: 100vh;
 }
